# kcp-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
kcp/: VERSION  ikcp.c
src/: config.rs  conv.rs  ffi.rs  halfclose.rs  kcp.rs  lib.rs  listener.rs  protocol.rs  session.rs  stream.rs  transport.rs  udp.rs
src/transport/: duplex.rs  merge.rs  mod.rs  mpsc.rs  sink.rs  udp.rs
tests/: stream.rs  udp.rs
