[package]
name = "kcp-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "kcp_rs"
path = "src/lib.rs"

[features]
default = []
#gen-ffi = []

[dependencies]
bytes = "1"
futures = "0.3"
hashlink = "0.8"
log = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["net", "sync", "rt", "macros", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
zerocopy = "0.6"

[dev-dependencies]
env_logger = "0.9"

[build-dependencies]
build-helper2 = { git = "https://git.whiftec.com/git/rust/build-helper2.git" }
cc = { version = "1.0", features = ["parallel"] }
