[package]
name = "kcp-rs"
version = "0.2.3"
edition = "2021"
build = "build.rs"

[lib]
name = "kcp"
path = "src/lib.rs"

[features]
default = ["udp"]
conv = ["parking_lot", "hashlink"]
stream = ["futures", "once_cell", "tokio", "tokio-stream", "tokio-util"]
udp = ["conv", "stream"]
#gen-ffi = []

[dependencies]
bytes = "1"
futures = { version = "0.3", optional = true }
hashlink = { version = "0.8", optional = true }
log = "0.4"
once_cell = { version = "1", optional = true }
parking_lot = { version = "0.12", optional = true }
rand = "0.8"
tokio = { version = "1", features = ["net", "sync", "rt", "macros", "time"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
tokio-util = { version = "0.7", features = ["codec", "io", "net"], optional = true }

[dev-dependencies]
env_logger = "0.9"

[build-dependencies]
smart-build = { git = "https://git.whiftec.com/git/rust/smart-build.git" }
cc = { version = "1.0" }
